--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -96,6 +96,20 @@
                     margin:30px 0px !important ;
                     mix-blend-mode: multiply;
                     border:2px solid forestgreen;
+                    position: relative;
+                    animation: to-and-fro 1s ease-in-out 0.25s infinite alternate-reverse;
+
+                    @keyframes to-and-fro {
+
+                        from{
+                           top:10px;
+                            
+                        }
+                        to{
+                            top:-10px;
+                        }
+                        
+                    }
                     
                    
                 }
@@ -129,7 +143,7 @@
 
 
                 .submitReset{
-                    border:2px solid pink;
+                    border:2px solid rgb(255, 0, 43);
                     display: flex;
                     justify-content: space-between;
                     padding:30px !important;
