--- a/views/index.hbs
+++ b/views/index.hbs
@@ -73,11 +73,11 @@
                   <div style="border:2px solid dodgerblue;" id="GenderContainer">
 
                     <span style="border: 2px solid green;">
-                      <input type="radio" name="Gender" id="Male" style="border:2px solid red">
+                      <input value="Male" type="radio" name="Gender" id="Male" style="border:2px solid red">
                       <label for="Male">Male</label>
                     </span>
                     <span>
-                      <input type="radio" name="Gender" id="Female" style="border:2px solid red">
+                      <input value="Female" type="radio" name="Gender" id="Female" style="border:2px solid red">
                       <label for="Female">Female</label>
                     </span>
                   </div>
